@@ -1,6 +1,6 @@
 package server.FruitShop.config;
 
-
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.web.cors.CorsConfiguration;
@@ -8,31 +8,30 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 public class CorsConfig {
+
+    // Đọc từ property cors.origins (set qua env var CORS_ORIGINS trên Render)
+    // Fallback: localhost khi chạy local (profile dev)
+    @Value("${cors.origins:http://localhost:5173,http://localhost:3000}")
+    private String corsOrigins;
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
 
-        // Cho phép frontend URLs cụ thể
-        configuration.setAllowedOrigins(Arrays.asList(
-            "http://localhost:5173", 
-            "http://localhost:3000",
-            "https://fruitshop-c4.vercel.app"
-        ));
+        // Parse comma-separated string → List
+        List<String> origins = Arrays.stream(corsOrigins.split(","))
+                .map(String::trim)
+                .filter(s -> !s.isBlank())
+                .toList();
 
-        // Cho phép tất cả HTTP methods
+        configuration.setAllowedOrigins(origins);
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
-
-        // Cho phép tất cả headers
-        configuration.setAllowedHeaders(Arrays.asList("*"));
-
-        // Cho phép credentials (cookies, authorization headers)
+        configuration.setAllowedHeaders(List.of("*"));
         configuration.setAllowCredentials(true);
-
-        // Cấu hình preflight request cache
         configuration.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
